syntax = "proto3";

import "services/backend/resources.proto";
import "google/protobuf/timestamp.proto";

package backend;

message PostLoginRequest {
  string id = 1; // it means group_id
  string password = 2;
}

message PostLoginResponse {
  Group group = 1;
  string token = 2;
}

message PostSubmitRequest {
  string url = 1;
  int32 contest_id = 2;
}

message PostSubmitResponse {
  int32 id = 1;
  string url = 2;
  int32 contest_id = 3;
  google.protobuf.Timestamp submited_at = 4;
}

message GetSubmitRequest { int32 submit_id = 1; }

message GetSubmitResponse { Submit submit = 1; }

message ListSubmitsRequest {
  int32 contest_id = 1;
  optional string group_name = 2; // middle match
  optional Status status = 3;
  optional bool contains_guest = 4; // default: false
}

message ListSubmitsResponse {
  repeated Submit submits = 1; // NOTE: task_results will be empty
}

message CreateContestRequest {
  string title = 2;
  google.protobuf.Timestamp start_at = 4;
  google.protobuf.Timestamp end_at = 5;
  int32 submit_limit = 6;
  string slug = 8;
  oneof tag_selection {
    TagSelectionLogicAuto auto = 9;
    TagSelectionLogicManual manual = 10;
  }
  backend.Validator validator = 11;
}

message CreateContestResponse {
  Contest contest = 1;
}

message GetContestRequest {
  int32 id = 1;
}

message GetContestResponse {
  Contest contest = 1;
}

// NOTE: cannot change slug and tag selection logic
message UpdateContestRequest {
  int32 id = 1;
  optional string title = 2;
  optional google.protobuf.Timestamp start_at = 4;
  optional google.protobuf.Timestamp end_at = 5;
  optional int32 submit_limit = 6;
  optional backend.Validator validator = 9;
}

message UpdateContestResponse {
  Contest contest = 1;
}

message GetRankingRequest {
  int32 contest_id = 1;
  bool contain_guest = 2; // if it is true, return ranking which includes guests
}

message GetRankingResponse {
  message Record {
    int32 rank = 1;
    Group group = 2;
    optional int32 score = 3;
  }
  repeated Record records = 1;
}

message PingUnaryRequest { string ping = 1; }

message PingUnaryResponse { string pong = 1; }

message PingServerSideStreamingRequest { string ping = 2; }

message PingServerSideStreamingResponse { string pong = 2; }

message ListContestsRequest {}

message ListContestsResponse { repeated Contest contests = 2; }

message VerifyTokenRequest {}

message VerifyTokenResponse {
  bool ok = 1;
  string message = 2;
}
