syntax = "proto3";

import "services/backend/messages.proto";

package backend;

service BackendService {
  rpc GetRanking(GetRankingRequest) returns (GetRankingResponse);
  rpc PostSubmit(PostSubmitRequest) returns (PostSubmitResponse);
  rpc GetSubmit(GetSubmitRequest) returns (stream GetSubmitResponse);
  rpc ListSubmits(ListSubmitsRequest) returns (ListSubmitsResponse);
  rpc PostLogin(PostLoginRequest) returns (PostLoginResponse);
  rpc ListContests(ListContestsRequest) returns (ListContestsResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

service HealthcheckService {
  rpc PingUnary(PingUnaryRequest) returns (PingUnaryResponse);
  rpc PingServerSideStreaming(PingServerSideStreamingRequest)
      returns (stream PingServerSideStreamingResponse);
}
